[workspace]
members = [
  "dqcli",
  "librdap-storm",
]

resolver = "2"

# Workspace-wide metadata
[workspace.package]
version = "0.2.0"
authors = ["Mikal Villa <mail@mux.rs>"]
license = "Apache-2.0"
repository = "https://github.com/mikalv/domainstorm"
keywords = ["cli", "tui", "domain", "rdap", "availability"]
categories = ["command-line-utilities", "network-programming", "command-line-interface"]
readme = "README.md"
edition = "2021"

# Shared dependencies across all crates in the workspace
# This ensures version consistency and reduces build times
[workspace.dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for RDAP requests
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization for JSON output and internal data structures
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration file parsing
toml = "0.9.2"

# Error handling and utilities
regex = "1.10"
futures = "0.3"

# CLI-specific dependencies (only used by domain-check crate)
clap = { version = "4.5", features = ["derive"] }
console = "0.15"

# Optional dependencies for advanced features
lazy_static = "1.4.0"

