[package]
name = "dqcli"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
edition.workspace = true

default-run = "dq"

[[bin]]
name = "dq"
path = "src/main.rs"

[dependencies]
librdap-storm = { path = "../librdap-storm" }
tokio = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
dirs = "6"
arboard = "3"
open = "5"
