[package]
name = "librdap-storm"
description = "High-performance RDAP domain availability probing"

version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
governor = "0.10"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
dashmap = "6"
